--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <button id="open-menu-btn"><i class="fa-sharp fa-solid fa-bars fa-xs"></i></button>
-            <button id="open-menu-btn"><i class="fa-solid fa-xmark"></i></button>
+            <button id="close-menu-btn"><i class="fa-solid fa-xmark"></i></button>
         </div>
     </nav>
 
